--- a/view/uploaddeck.html
+++ b/view/uploaddeck.html
@@ -1,4 +1,5 @@
 {{define "uploaddeck"}}
+<h3>Upload A Deck</h3>
 <form enctype="multipart/form-data" action="/upload" method="post">
     <input type="file" name="uploadfile" />
     <input type="hidden" name="token" value="{{.}}"/>
